@@ -3,12 +3,17 @@ package com.evgeniyfedorchenko.gptbot.yandex;
 import com.evgeniyfedorchenko.gptbot.data.RedisService;
 import com.evgeniyfedorchenko.gptbot.yandex.models.GptMessageUnit;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.objects.Message;
 
+import java.io.ByteArrayInputStream;
+import java.io.InputStream;
+import java.util.Base64;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
+@Slf4j
 @Component
 @AllArgsConstructor
 public class YandexService {
@@ -20,6 +25,7 @@ public class YandexService {
 
         String userChatId = String.valueOf(telegramMess.getChatId());
         GptMessageUnit question = new GptMessageUnit(GptMessageUnit.Role.USER.getRole(), telegramMess.getText());
+        log.info("USER: {}", telegramMess.getText());
 
         List<GptMessageUnit> history = redisService.getHistory(userChatId);
         history.add(question);
@@ -27,13 +33,47 @@ public class YandexService {
         GptMessageUnit answer = yandexCaller.buildRequest(history)
                 .result()
                 .alternatives()
-                .get(0)
-                .gptMessageUnit();
+                .getFirst()
+                .message();
 
         CompletableFuture.runAsync(() -> {
             redisService.addMessage(userChatId, question);
             redisService.addMessage(userChatId, answer);
         });
+        log.info("ASSISTANT: {}", answer.text());
         return answer.text();
     }
+
+    public String newPicture(Message telegramMess) {
+        return yandexCaller.buildRequestArt(telegramMess.getText());
+    }
+
+    public InputStream getReadyPicture(String imageId) {
+        String imageBase64 = yandexCaller.checkImage(imageId);
+
+        byte[] bytes = Base64.getDecoder().decode(imageBase64);
+         return new ByteArrayInputStream(bytes);
+
+    }
 }
+
+/*
+
+{
+"modelUri": "art://<идентификатор_каталога>/yandex-art/latest",
+"generationOptions": {
+  "seed": "1863",
+  "aspectRatio": {
+     "widthRatio": "2",
+     "heightRatio": "1"
+   }
+},
+"messages": [
+  {
+    "weight": "1",
+    "text": "узор из цветных пастельных суккулентов разных сортов, hd full wallpaper, четкий фокус, множество сложных деталей, глубина кадра, вид сверху"
+  }
+]
+}
+
+*/
